# Shanyraq.KZ

./: Advertisement.py  AdvertisementSearch.py  Advertisements.db  Comments.db  Dockerfile  POST.py  ShanyraqDB.db  ShanyraqDB2.db  UpdateUser.py  User.py  auth.py  comment.py  main.py  pyproject.toml  requirements.txt
app/: main.py
new_venv/: pyvenv.cfg
scripts/: launch.sh
